# golden-rag-chat

./: README.md  local_pipeline.py  main.py  service.py  test_api_chat_mock.py
golden-rag-chat/: .gitignore  pyproject.toml
golden-rag-chat/docs/: api_contract.md  architecture.md  data_contracts.md  deployment.md  llm_wiki.md
golden-rag-chat/docs/adr/: 0001-bedrock-first-not-bedrock-locked.md  0002-golden-data-boundary.md  0003-provider-architecture.md
golden-rag-chat/src/golden_rag_chat/: __init__.py  config.py  errors.py  logging.py
golden-rag-chat/src/golden_rag_chat/api/: __init__.py  dependencies.py  errors.py  schemas.py
golden-rag-chat/src/golden_rag_chat/chat/: __init__.py  prompt_builder.py  service.py  source_formatter.py
golden-rag-chat/src/golden_rag_chat/domains/: __init__.py  agriculture.py  apolo.py  base.py
golden-rag-chat/src/golden_rag_chat/golden_data/: __init__.py  contracts.py  loader.py  local_jsonl.py  local_parquet.py
golden-rag-chat/src/golden_rag_chat/llm/: __init__.py  base.py  bedrock_converse.py  mock.py  ollama.py  openrouter.py
golden-rag-chat/src/golden_rag_chat/rag/: __init__.py  base.py  bedrock_retrieve_and_generate.py
golden-rag-chat/src/golden_rag_chat/retrieval/: __init__.py  base.py  bedrock_kb.py  local.py  mock.py
golden-rag-chat/src/golden_rag_chat/user_state/: __init__.py  base.py  dynamodb.py  (+2 more)
golden-rag-chat/tests/: conftest.py  test_api_chat_mock.py  test_api_health.py  test_data_contracts.py  test_llm_bedrock.py  test_llm_mock.py  test_llm_openrouter.py  test_prompt_builder.py  test_retrieval_local.py
(+6 files in other folders)
