[project]
name = "golden-rag-chat"
version = "0.1.0"
description = "Reusable Golden-Data RAG chatbot backend (Bedrock-first, not Bedrock-locked)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Golden RAG Chat" }]

dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy / cloud-specific extras. Never required by the default offline test suite.
parquet = ["pyarrow>=16"]
bedrock = ["boto3>=1.34"]
aws = ["boto3>=1.34"]
all = ["pyarrow>=16", "boto3>=1.34"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golden_rag_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["golden_rag_chat"]
